# gate-public

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
eigen-3.3.8/: .gitignore
eigen-3.3.8/Eigen/: geometry_wrapper.h
eigen-3.3.8/Eigen/src/Core/arch/CUDA/: Half.h
eigen-3.3.8/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h
gate/: CMakeLists.txt
gate/examples/: GATE_cartpole.cu  GATE_dubins.cu  GATE_quad.cu  GATE_smd.cu
gate/include/: gpu_err_chk.h  managed.cuh
gate/include/controllers/: guidance_stream_managed.cu  guidance_stream_managed.cuh
gate/include/controllers/cartpole/: cartpole_LQR.cuh
gate/include/controllers/dubin_vehicle/: dubin_PID.cuh
gate/include/controllers/mass_spring_damper/: mass_spring_damper_LQR.cuh  mass_spring_damper_PID.cuh
gate/include/controllers/quadrotor/: quad_LQR.cuh
gate/include/cuda_util/: cuda_memory_utils.cuh  stream_managed.cuh
gate/include/dynamics/: dynamics_stream_managed.cu  dynamics_stream_managed.cuh  integrators_eigen.cuh  util.cuh
gate/include/dynamics/cartpole/: cartpole_dynamics.cuh
gate/include/dynamics/dubin_vehicle/: dubin_dynamics.cuh
gate/include/dynamics/mass_spring_damper/: mass_spring_damper_dynamics.cuh
gate/include/dynamics/quadrotor/: quad_dynamics.cuh
gate/include/perturbations/: perturbations_stream_managed.cu  perturbations_stream_managed.cuh
gate/include/perturbations/cartpole/: cartpole_perturbations.cuh
gate/include/perturbations/dubin_vehicle/: dubin_perturbations.cuh
gate/include/perturbations/mass_spring_damper/: mass_spring_damper_perturbations.cuh
gate/include/perturbations/quadrotor/: quad_perturbations.cuh
gate/include/trajectory_generation/: GATE.cu  GATE.cuh  trajectory_export.h
gate/src/: CMakeLists.txt
gate/src/plotting/: plot.py
test/: CMakeLists.txt  test_main.cpp
test/cuda_util_tests/: CMakeLists.txt  dynamics_stream_managed_test.cu
test/gate_tests/: CMakeLists.txt  gate_cartpole_test.cu  gate_dubin_test.cu  gate_mass_spring_damper_test.cu  gate_quad_test.cu
test/general_util_tests/: CMakeLists.txt  eigen_cpp_test.cpp  eigen_test.cu  rk4_test.cu
test/include/: test_helper.hpp
